[package]
name = "paramore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = {version="1.0.115",optional=true}
serde_yaml = {version="0.9.34",optional=true}

[features]
default = ["all"]
all = ["json","yaml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
